Modificaciones About + PDF Plugin

--- a/0BcYmmL4pj/index.html
+++ b/0BcYmmL4pj/index.html
@@ -8,8 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link href="images/favicon-16x16.png" rel="shortcut icon">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/bootstrap-switch.min.css" rel="stylesheet">
-
+  <link href="css/pdfplugin.css" rel="stylesheet">
 
 	<!--[if lt IE 9]>
 		<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -31,8 +30,10 @@
                     <li class="active"><a href="sm.html"><i class="glyphicon glyphicon-list-alt"></i> MS</a></li>
                     <li><a href="wt.html"><i class="glyphicon glyphicon-list"></i> WtHR</a></li>
                     <li><a href="ht.html"><i class="glyphicon glyphicon-th"></i> HT</a></li>
-                    <li><a href="vl.html"><i class="glyphicon glyphicon-registration-mark"></i> Validation</a></li>
-                    <li><a href="au.html"><i class="glyphicon glyphicon-info-sign"></i> Authors</a></li>
+                    <li><a href="vl.html"><i class="glyphicon glyphicon-ok"></i> Validation</a></li>
+                    <li><a href="au.html"><i class="glyphicon glyphicon-user"></i> Authors</a></li>
+                    <li><a href="ab.html"><i class="glyphicon glyphicon-edit"></i> About</a></li>
+
                 </ul>
                 <ul class="list-unstyled hidden-xs" id="sidebar-footer">
                     <li>
@@ -49,8 +50,9 @@
                   	<li><a href="sm.html" class="text-center"><i class="glyphicon glyphicon-list-alt"></i></a></li>
                     <li><a href="wt.html" class="text-center"><i class="glyphicon glyphicon-list"></i></a></li>
                   	<li><a href="ht.html" class="text-center"><i class="glyphicon glyphicon-th"></i></a></li>
-                    <li><a href="vl.html" class="text-center"><i class="glyphicon glyphicon-registration-mark"></i></a></li>
-                    <li><a href="au.html" class="text-center"><i class="glyphicon glyphicon-info-sign"></i></a></li>
+                    <li><a href="vl.html" class="text-center"><i class="glyphicon glyphicon-ok"></i></a></li>
+                    <li><a href="au.html" class="text-center"><i class="glyphicon glyphicon-user"></i></a></li>
+                    <li><a href="ab.html" class="text-center"><i class="glyphicon glyphicon-edit"></i></a></li>
               </ul>
               
             </div>
@@ -444,9 +446,9 @@
 
 	<!-- script references -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-    <script type="text/javascript" src="angular/1.4.3/angular.min.js"></script>
+    <script src="js/pdfplugin.js"></script>
+    <script src="angular/1.4.3/angular.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
-    <script src="js/bootstrap-switch.min.js"></script>
 		<script src="js/scripts.js"></script>
     
 	</body>
