Add New Rules + ORCID

--- a/MetS/ab.html
+++ b/MetS/ab.html
@@ -96,7 +96,7 @@
                           
                           <p><img src="images/mets.png" width="100px" class = "img-thumbnail"></p>
 
-                          <div class="alert alert-info"><strong>José Checa-Claudel.</strong> <i>Programmer Analyst at New Technologies Area. Support Services for Teaching and Research - Systems, University of Cordoba, Córdoba, Spain. <a href="http://orcid.org/0000-0001-6501-0283" target="_blank">ORCID: 0000-0001-6501-0283</a> at <a href="https://github.com/jcheca/jcheca.github.io/tree/master/MetS">GitHub</a></i></div>
+                          <div class="alert alert-info"><strong>José Checa-Claudel.</strong> <i>Programmer Analyst at New Technologies Area. Support Services for Teaching and Research - Systems, University of Cordoba, Córdoba, Spain. <a href="http://orcid.org/0000-0001-6501-0283" target="_blank">ORCID: 0000-0001-6501-0283</a> at <a href="https://github.com/jcheca">GitHub</a></i></div>
 
                           <p><a class="btn btn-default view-pdf" href="images/article_mets.pdf" role="button" target="_blank">PDF Article &raquo;</a></p>
 
