--- a/MetS/index.html
+++ b/MetS/index.html
@@ -71,6 +71,7 @@
           				      <span class="icon-bar"></span>
                       </button>
                       <a href="index.html" class="navbar-brand logo">MetS</a>
+                      <p class="logo2">A Non-invasive method for early detection.<br>&#169; 2016.Feb</p>
                   	</div>
                 </div>
 
@@ -99,20 +100,6 @@
 
                         <p>Let's try !!</p>
 
-               
-
-
-
-
-
-
-
-
-
-
-
-
-
                         <h5>Check questions below to set to True.</h5>
 
                         <div class="row">
@@ -121,7 +108,7 @@
                               <span class="input-group-addon">
                               <input type="checkbox" aria-label="..." ng-model="user.cb1" value="{{user.cb1}}">
                               </span>
-                              <input type="text" class="form-control" value="Is WtHR < 0,55 ?" disabled>
+                              <input type="text" class="form-control" value="Is WtHR >= 0,55 ?" disabled>
                             </div><!-- /input-group -->
                           </div><!-- /.col-lg-6 -->
                         </div>
@@ -141,289 +128,47 @@
 
                         <p>
                         <div class="row">
+
                           <!-- Resolución casos -->  
-                          <div class="col-lg-6" ng-if="user.cb1 == true">
+                          <div class="col-lg-6" ng-if="user.cb1 !== true">
                              <div ng-if="user.cb2 == true">
                               <div class="alert alert-success" role="alert">(4) NO Metabolic Syndrome</div>
-                              
-                              <!-- Low WtHR<0.55 :: Node 1 -->
-                              <h4>Low WtHR less than 0,55 - Node 1</h4>
-                              <div class="table-responsive">
-                              <table class="table table-striped table-bordered table-hover">
-                                <tbody>
-
-                                <tr class="success">
-                                  <th>Categoría</th>
-                                  <th>%</th>
-                                  <th>N</th>
-                                </tr>
-                                <tr>
-                                  <td>MetS No</td>
-                                  <td>97.8</td>
-                                  <td>441</td>
-                                </tr>
-                                <tr>
-                                  <td>MetS Yes</td>
-                                  <td>2.2</td>
-                                  <td>10</td>
-                                </tr>
-                                <tr class="success">
-                                  <td>TOTAL</td>
-                                  <td>70.9</td>
-                                  <td>451</td>
-                                </tr>
-
-                                </tbody>
-                              </table>
+                              <p>Statistical significance:</p>
+                              <div class="progress">
+                                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="9.5" aria-valuemin="0" aria-valuemax="100" style="width: 9.5%">
+                                9.5%
+                                </div>
                               </div>
-                              <!-- /Low WtHR<0,55 :: Node 1 -->
-
-                              <!-- HTN >=  :: Node 4 -->
-                              <h4>HTN(Yes) - Node 4</h4>
-                              <div class="table-responsive">
-                              <table class="table table-striped table-bordered table-hover">
-                                <tbody>
-
-                                <tr class="success">
-                                  <th>Categoría</th>
-                                  <th>%</th>
-                                  <th>N</th>
-                                </tr>
-                                <tr>
-                                  <td>MetS No</td>
-                                  <td>90.5</td>
-                                  <td>76</td>
-                                </tr>
-                                <tr>
-                                  <td>MetS Yes</td>
-                                  <td>9.5</td>
-                                  <td>8</td>
-                                </tr>
-                                <tr class="success">
-                                  <td>TOTAL</td>
-                                  <td>13.2</td>
-                                  <td>84</td>
-                                </tr>
-
-                                </tbody>
-                              </table>
-                              </div>
-                              <!-- /HTN >=  :: Node 4 -->
-
-
-
                              </div>
                              <div ng-if="user.cb2 !== true">
                               <div class="alert alert-success" role="alert">(3) NO Metabolic Syndrome</div>
-
-                              <!-- Low WtHR<0.55 :: Node 1 -->
-                              <h4>Low WtHR less than 0,55 - Node 1</h4>
-                              <div class="table-responsive">
-                              <table class="table table-striped table-bordered table-hover">
-                                <tbody>
-
-                                <tr class="success">
-                                  <th>Categoría</th>
-                                  <th>%</th>
-                                  <th>N</th>
-                                </tr>
-                                <tr>
-                                  <td>MetS No</td>
-                                  <td>97.8</td>
-                                  <td>441</td>
-                                </tr>
-                                <tr>
-                                  <td>MetS Yes</td>
-                                  <td>2.2</td>
-                                  <td>10</td>
-                                </tr>
-                                <tr class="success">
-                                  <td>TOTAL</td>
-                                  <td>70.9</td>
-                                  <td>451</td>
-                                </tr>
-
-                                </tbody>
-                              </table>
+                              <p>Statistical significance:</p>
+                              <div class="progress">
+                                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0.5" aria-valuemin="0" aria-valuemax="100" style="width: 1%">
+                                0.5%
+                                </div>
                               </div>
-                              <!-- /Low WtHR<0,55 :: Node 1 -->
-
-                              <!-- HTN(NO) :: Node 3 -->
-                              <h4>HTN(2) - Node 3</h4>
-                              <div class="table-responsive">
-                              <table class="table table-striped table-bordered table-hover">
-                                <tbody>
-
-                                <tr class="success">
-                                  <th>Categoría</th>
-                                  <th>%</th>
-                                  <th>N</th>
-                                </tr>
-                                <tr>
-                                  <td>MetS No</td>
-                                  <td>99.5</td>
-                                  <td>365</td>
-                                </tr>
-                                <tr>
-                                  <td>MetS Yes</td>
-                                  <td>0.5</td>
-                                  <td>2</td>
-                                </tr>
-                                <tr class="success">
-                                  <td>TOTAL</td>
-                                  <td>57.7</td>
-                                  <td>367</td>
-                                </tr>
-
-                                </tbody>
-                              </table>
-                              </div>
-                              <!-- /HTN(NO) :: Node 3 -->
-
-
-
-
                              </div>
                           </div> 
-                          <div class="col-lg-6" ng-if="user.cb1 !== true">
+
+                          <div class="col-lg-6" ng-if="user.cb1 == true">
                             <div ng-if="user.cb2 == true">
                                 <div class="alert alert-danger" role="alert">(6) Metabolic Syndrome: YES, Look for your Occupational Safety and Health Dr.</div>
-
-                              <!-- Low WtHR>=,55 :: Node 2 -->
-                              <h4>Low WtHR greater o iqual to 0,55 - Node 2</h4>
-                              <div class="table-responsive">
-                              <table class="table table-striped table-bordered table-hover">
-                                <tbody>
-
-                                <tr class="danger">
-                                  <th>Categoría</th>
-                                  <th>%</th>
-                                  <th>N</th>
-                                </tr>
-                                <tr>
-                                  <td>MetS No</td>
-                                  <td>54.1</td>
-                                  <td>100</td>
-                                </tr>
-                                <tr class="alert-danger">
-                                  <td>MetS Yes</td>
-                                  <td>45.9</td>
-                                  <td>85</td>
-                                </tr>
-                                <tr class="danger">
-                                  <td>TOTAL</td>
-                                  <td>29.1</td>
-                                  <td>185</td>
-                                </tr>
-
-                                </tbody>
-                              </table>
+                              <p>Statistical significance:</p>  
+                              <div class="progress">
+                                <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="61.7" aria-valuemin="0" aria-valuemax="100" style="width: 61.7%">
+                                61.7% - (MetS Danger) 
+                                </div>
                               </div>
-                              <!-- /Low WtHR>=0,55 :: Node 2 -->
-
-                              <!-- HTN (Yes) :: Node 6 -->
-                              <h4>HTN (Yes) - Node 6</h4>
-                              <div class="table-responsive">
-                              <table class="table table-striped table-bordered table-hover">
-                                <tbody>
-
-                                <tr class="danger">
-                                  <th>Categoría</th>
-                                  <th>%</th>
-                                  <th>N</th>
-                                </tr>
-                                <tr>
-                                  <td>MetS No</td>
-                                  <td>38.3</td>
-                                  <td>46</td>
-                                </tr>
-                                <tr class="alert-danger">
-                                  <td>MetS Yes</td>
-                                  <td>61.7</td>
-                                  <td>74</td>
-                                </tr>
-                                <tr class="danger">
-                                  <td>TOTAL</td>
-                                  <td>18.9</td>
-                                  <td>120</td>
-                                </tr>
-
-                                </tbody>
-                              </table>
-                              </div>
-                              <!-- /HTN (Yes) :: Node 6 -->
-
                             </div>
                             <div ng-if="user.cb2 !== true">
                               <div class="alert alert-success" role="alert">(5) NO Metabolic Syndrome</div>
-
-                              <!-- Low WtHR>=0,55 :: Node 2 -->
-                              <h4>Low WtHR greater or equal to 0,55 - Node 2</h4>
-                              <div class="table-responsive">
-                              <table class="table table-striped table-bordered table-hover">
-                                <tbody>
-
-                                <tr class="success">
-                                  <th>Categoría</th>
-                                  <th>%</th>
-                                  <th>N</th>
-                                </tr>
-                                <tr>
-                                  <td>MetS No</td>
-                                  <td>54.1</td>
-                                  <td>100</td>
-                                </tr>
-                                <tr>
-                                  <td>MetS Yes</td>
-                                  <td>45.9</td>
-                                  <td>85</td>
-                                </tr>
-                                <tr class="success">
-                                  <td>TOTAL</td>
-                                  <td>29.1</td>
-                                  <td>185</td>
-                                </tr>
-
-                                </tbody>
-                              </table>
+                              <p>Statistical significance:</p>
+                              <div class="progress">
+                                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="16.9" aria-valuemin="0" aria-valuemax="100" style="width: 16.9%">
+                                16.9%
+                                </div>
                               </div>
-                              <!-- /Low WtHR>=0,55 :: Node 2 -->
-
-
-
-                              <!-- HTN (No) :: Node 5 -->
-                              <h4>HTN (No) - Node 5</h4>
-                              <div class="table-responsive">
-                              <table class="table table-striped table-bordered table-hover">
-                                <tbody>
-
-                                <tr class="success">
-                                  <th>Categoría</th>
-                                  <th>%</th>
-                                  <th>N</th>
-                                </tr>
-                                <tr>
-                                  <td>MetS No</td>
-                                  <td>83.1</td>
-                                  <td>54</td>
-                                </tr>
-                                <tr>
-                                  <td>MetS Yes</td>
-                                  <td>16.9</td>
-                                  <td>11</td>
-                                </tr>
-                                <tr class="success">
-                                  <td>TOTAL</td>
-                                  <td>10.2</td>
-                                  <td>65</td>
-                                </tr>
-
-                                </tbody>
-                              </table>
-                              </div>
-                              <!-- /HTN (No) :: Node 5 -->
-
-
                             </div>
                           </div> 
                         </div>
