Add New Rules + ORCID

--- a/MetS/index.html
+++ b/MetS/index.html
@@ -71,7 +71,7 @@
           				      <span class="icon-bar"></span>
                       </button>
                       <a href="index.html" class="navbar-brand logo">MetS</a>
-                      <p class="logo2">A Non-invasive method for early detection.<br>&#169; 2016.Feb</p>
+                      <p class="logo2">A Non-invasive method for early detection. &#169; 2016.Feb</p>
                   	</div>
                 </div>
 
@@ -133,7 +133,7 @@
                           <div class="col-lg-6" ng-if="user.cb1 !== true">
                              <div ng-if="user.cb2 == true">
                               <div class="alert alert-success" role="alert">(4) NO Metabolic Syndrome</div>
-                              <p>Statistical significance:</p>
+                              <p>Statistical significance (9.5%):</p>
                               <div class="progress">
                                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="9.5" aria-valuemin="0" aria-valuemax="100" style="width: 9.5%">
                                 9.5%
@@ -142,7 +142,7 @@
                              </div>
                              <div ng-if="user.cb2 !== true">
                               <div class="alert alert-success" role="alert">(3) NO Metabolic Syndrome</div>
-                              <p>Statistical significance:</p>
+                              <p>Statistical significance (0.5%):</p>
                               <div class="progress">
                                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0.5" aria-valuemin="0" aria-valuemax="100" style="width: 1%">
                                 0.5%
@@ -154,7 +154,7 @@
                           <div class="col-lg-6" ng-if="user.cb1 == true">
                             <div ng-if="user.cb2 == true">
                                 <div class="alert alert-danger" role="alert">(6) Metabolic Syndrome: YES, Look for your Occupational Safety and Health Dr.</div>
-                              <p>Statistical significance:</p>  
+                              <p>Statistical significance (61.7%):</p>  
                               <div class="progress">
                                 <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="61.7" aria-valuemin="0" aria-valuemax="100" style="width: 61.7%">
                                 61.7% - (MetS Danger) 
@@ -163,7 +163,7 @@
                             </div>
                             <div ng-if="user.cb2 !== true">
                               <div class="alert alert-success" role="alert">(5) NO Metabolic Syndrome</div>
-                              <p>Statistical significance:</p>
+                              <p>Statistical significance (16.9%):</p>
                               <div class="progress">
                                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="16.9" aria-valuemin="0" aria-valuemax="100" style="width: 16.9%">
                                 16.9%
