Actualizando Script Idioma LocalStorage

--- a/MetS/index.html
+++ b/MetS/index.html
@@ -98,7 +98,7 @@
           				      <span class="icon-bar"></span>
           				      <span class="icon-bar"></span>
                       </button>
-                      <img class="navbar-brand logo-lang" src="images/{{Idioma}}.png" width="25px;" ng-click="cambiame()">
+                      <img class="navbar-brand logo-lang" ng-src="images/{{Idioma}}.png" width="25px;" ng-click="cambiame()">
                       <a href="index.html" class="navbar-brand logo">MetS</a>
                       <div ng-if="Idioma == 'EN'"> 
                       <p class="logo2">A Non-invasive method for early detection. &#169; 2016.Feb</p>
