--- a/MetS/ab.html
+++ b/MetS/ab.html
@@ -100,6 +100,7 @@
           				      <span class="icon-bar"></span>
           				      <span class="icon-bar"></span>
                       </button>
+                      <img class="navbar-brand logo-lang" ng-src="images/{{Idioma}}.png" width="25px;" ng-click="cambiame()">
                       <a href="index.html" class="navbar-brand logo">MetS</a>
                   	</div>
                 </div>
