Actualizando Script Idioma LocalStorage

--- a/MetS/index.html
+++ b/MetS/index.html
@@ -101,10 +101,10 @@
                       <img class="navbar-brand logo-lang" ng-src="images/{{Idioma}}.png" width="25px;" ng-click="cambiame()">
                       <a href="index.html" class="navbar-brand logo">MetS</a>
                       <div ng-if="Idioma == 'EN'"> 
-                      <p class="logo2">A Non-invasive method for early detection. &#169; 2016.Feb</p>
+                      <p class="logo2">A Non-invasive method for early detection.</p>
                       </div>
                       <div ng-if="Idioma == 'ES'"> 
-                      <p class="logo2">Método para la detección precoz del síndrome metabólico. &#169; 2016.Feb</p>
+                      <p class="logo2">Método para detección precoz del síndrome metabólico.</p>
                       </div>
 
                   	</div>
