--- a/MetS/au.html
+++ b/MetS/au.html
@@ -43,7 +43,7 @@
                       <h3>
                         <a href="http://www.uco.es" target="_blank"><img src="images/logo-footer.png" width="28px"></a> 
                         <a href="http://imibic.org" target="_blank"><img src="images/imibic.png" width="130px"></a>
-                        <hr><p>MetS</p>
+                        <hr><p>NIM MetS</p>
                       </h3> Metabolic Syndrome
                     </li>
                 </ul>
@@ -65,7 +65,7 @@
                       <h3>
                         <a href="http://www.uco.es" target="_blank"><img src="images/logo-footer.png" width="28px"></a> 
                         <a href="http://imibic.org" target="_blank"><img src="images/imibic.png" width="130px"></a>
-                        <hr><p>MetS</p>
+                        <hr><p>NIM MetS</p>
                       </h3> Síndrome Metabólico
                     </li>
                 </ul>
@@ -99,7 +99,7 @@
           				      <span class="icon-bar"></span>
                       </button>
                       <img class="navbar-brand logo-lang" ng-src="images/{{Idioma}}.png" width="25px;" ng-click="cambiame()">
-                      <a href="index.html" class="navbar-brand logo">MetS</a>
+                      <a href="index.html" class="navbar-brand logo">NIM MetS</a>
                   	</div>
                 </div>
 
