--- a/MetS/index.html
+++ b/MetS/index.html
@@ -43,7 +43,7 @@
                       <h3>
                         <a href="http://www.uco.es" target="_blank"><img src="images/logo-footer.png" width="28px"></a> 
                         <a href="http://imibic.org" target="_blank"><img src="images/imibic.png" width="130px"></a>
-                        <hr><p>MetS</p>
+                        <hr><p>NIM MetS</p>
                       </h3> Metabolic Syndrome
                     </li>
                 </ul>
@@ -65,7 +65,7 @@
                       <h3>
                         <a href="http://www.uco.es" target="_blank"><img src="images/logo-footer.png" width="28px"></a> 
                         <a href="http://imibic.org" target="_blank"><img src="images/imibic.png" width="130px"></a>
-                        <hr><p>MetS</p>
+                        <hr><p>NIM MetS</p>
                       </h3> Síndrome Metabólico               
 
                     </li>
@@ -99,9 +99,9 @@
           				      <span class="icon-bar"></span>
                       </button>
                       <img class="navbar-brand logo-lang" ng-src="images/{{Idioma}}.png" width="25px;" ng-click="cambiame()">
-                      <a href="index.html" class="navbar-brand logo">MetS</a>
+                      <a href="index.html" class="navbar-brand logo">NIM MetS</a>
                       <div ng-if="Idioma == 'EN'"> 
-                      <p class="logo2">A Non-invasive method for early detection.</p>
+                      <p class="logo2">Non-invasive method for early detection.</p>
                       </div>
                       <div ng-if="Idioma == 'ES'"> 
                       <p class="logo2">Método para detección precoz del síndrome metabólico.</p>
@@ -156,9 +156,6 @@
                         </div>
 
 
-
-
-
                         <div class="row">
                           <div class="col-lg-6">
                             <div class="input-group">
@@ -192,11 +189,11 @@
                           <!-- Resolución casos -->  
                           <div class="col-lg-6" ng-if="user.cb1 !== true">
                              <div ng-if="user.cb2 == true">
-                              <div class="alert alert-success" role="alert" ng-if="Idioma == 'EN'">(4) NO Metabolic Syndrome</div>
-                              <div class="alert alert-success" role="alert" ng-if="Idioma == 'ES'">(4) NO Presenta Síndrome Metabólico</div>
+                              <div class="alert alert-success" role="alert" ng-if="Idioma == 'EN'">Low Metabolic Syndrome Risk.</div>
+                              <div class="alert alert-success" role="alert" ng-if="Idioma == 'ES'">Su riesgo de presentar Síndrome Metabólico es bajo.</div>
 
                               <p ng-if="Idioma == 'EN'">Statistical significance (9.5%):</p>
-                              <p ng-if="Idioma == 'ES'">Significado estadístico (9.5%):</p>
+                              <p ng-if="Idioma == 'ES'">Probabilidad de presentar Síndrome Metabólico (9.5%):</p>
 
                               <div class="progress">
                                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="9.5" aria-valuemin="0" aria-valuemax="100" style="width: 9.5%">
@@ -205,11 +202,11 @@
                               </div>
                              </div>
                              <div ng-if="user.cb2 !== true">
-                              <div class="alert alert-success" role="alert" ng-if="Idioma == 'EN'">(3) NO Metabolic Syndrome</div>
-                              <div class="alert alert-success" role="alert" ng-if="Idioma == 'ES'">(3) NO Presenta Síndrome Metabólico</div>
+                              <div class="alert alert-success" role="alert" ng-if="Idioma == 'EN'">Very Low Metabolic Syndrome Risk.</div>
+                              <div class="alert alert-success" role="alert" ng-if="Idioma == 'ES'">Su riesgo de presentar Síndrome Metabólico es muy bajo.</div>
 
                               <p ng-if="Idioma == 'EN'">Statistical significance (0.5%):</p>
-                              <p ng-if="Idioma == 'ES'">Significado estadístico (0.5%):</p>
+                              <p ng-if="Idioma == 'ES'">Probabilidad de presentar Síndrome Metabólico (0.5%):</p>
 
                               <div class="progress">
                                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0.5" aria-valuemin="0" aria-valuemax="100" style="width: 1%">
@@ -221,10 +218,10 @@
 
                           <div class="col-lg-6" ng-if="user.cb1 == true">
                             <div ng-if="user.cb2 == true">
-                                <div class="alert alert-danger" role="alert" ng-if="Idioma == 'EN'">(6) Metabolic Syndrome: YES, Look for your Occupational Safety and Health Dr.</div>
-                                <div class="alert alert-danger" role="alert" ng-if="Idioma == 'ES'">(6) Síndrome Metabólico: SI, Acuda al Dr. de Seguridad en el Trabajo.</div>
+                                <div class="alert alert-danger" role="alert" ng-if="Idioma == 'EN'">High Metabolic Syndrome Risk. Look for your Occupational Safety and Health Dr.</div>
+                                <div class="alert alert-danger" role="alert" ng-if="Idioma == 'ES'">Su riesgo de presentar Síndrome Metabólico es alto. Se recomienda que realice una consulta con medicina o enfermería.</div>
                               <p ng-if="Idioma == 'EN'">Statistical significance (61.7%):</p>  
-                              <p ng-if="Idioma == 'ES'">Significado estadístico (61.7%):</p>  
+                              <p ng-if="Idioma == 'ES'">Probabilidad de presentar Síndrome Metabólico (61.7%):</p>  
 
                               <div class="progress">
                                 <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="61.7" aria-valuemin="0" aria-valuemax="100" style="width: 61.7%" ng-if="Idioma == 'EN'">
@@ -238,11 +235,11 @@
                               </div>
                             </div>
                             <div ng-if="user.cb2 !== true">
-                              <div class="alert alert-success" role="alert" ng-if="Idioma == 'EN'">(5) NO Metabolic Syndrome</div>
-                              <div class="alert alert-success" role="alert" ng-if="Idioma == 'ES'">(5) NO Presenta Síndrome Metabólico</div>
+                              <div class="alert alert-success" role="alert" ng-if="Idioma == 'EN'">Moderated Risk for Metabolic Syndrome.</div>
+                              <div class="alert alert-success" role="alert" ng-if="Idioma == 'ES'">Su riesgo de presentar Síndrome Metabólico es moderado.</div>
 
                               <p ng-if="Idioma == 'EN'">Statistical significance (16.9%):</p>
-                              <p ng-if="Idioma == 'ES'">Significado estadístico (16.9%):</p>
+                              <p ng-if="Idioma == 'ES'">Probabilidad de presentar Síndrome Metabólico (16.9%):</p>
 
                               <div class="progress">
                                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="16.9" aria-valuemin="0" aria-valuemax="100" style="width: 16.9%">
