Actualizando Script Idioma LocalStorage

--- a/MetS/index.html
+++ b/MetS/index.html
@@ -192,7 +192,7 @@
                               <div class="alert alert-success" role="alert" ng-if="Idioma == 'EN'">Low Metabolic Syndrome Risk.</div>
                               <div class="alert alert-success" role="alert" ng-if="Idioma == 'ES'">Su riesgo de presentar Síndrome Metabólico es bajo.</div>
 
-                              <p ng-if="Idioma == 'EN'">Statistical significance (9.5%):</p>
+                              <p ng-if="Idioma == 'EN'">Probability of developing Metabolic Syndrome (9.5%):</p>
                               <p ng-if="Idioma == 'ES'">Probabilidad de presentar Síndrome Metabólico (9.5%):</p>
 
                               <div class="progress">
@@ -205,7 +205,7 @@
                               <div class="alert alert-success" role="alert" ng-if="Idioma == 'EN'">Very Low Metabolic Syndrome Risk.</div>
                               <div class="alert alert-success" role="alert" ng-if="Idioma == 'ES'">Su riesgo de presentar Síndrome Metabólico es muy bajo.</div>
 
-                              <p ng-if="Idioma == 'EN'">Statistical significance (0.5%):</p>
+                              <p ng-if="Idioma == 'EN'">Probability of developing Metabolic Syndrome (0.5%):</p>
                               <p ng-if="Idioma == 'ES'">Probabilidad de presentar Síndrome Metabólico (0.5%):</p>
 
                               <div class="progress">
@@ -218,9 +218,9 @@
 
                           <div class="col-lg-6" ng-if="user.cb1 == true">
                             <div ng-if="user.cb2 == true">
-                                <div class="alert alert-danger" role="alert" ng-if="Idioma == 'EN'">High Metabolic Syndrome Risk. Look for your Occupational Safety and Health Dr.</div>
+                                <div class="alert alert-danger" role="alert" ng-if="Idioma == 'EN'">High Metabolic Syndrome Risk. We recommend that you consult with medical or nursing.</div>
                                 <div class="alert alert-danger" role="alert" ng-if="Idioma == 'ES'">Su riesgo de presentar Síndrome Metabólico es alto. Se recomienda que realice una consulta con medicina o enfermería.</div>
-                              <p ng-if="Idioma == 'EN'">Statistical significance (61.7%):</p>  
+                              <p ng-if="Idioma == 'EN'">Probability of developing Metabolic Syndrome (61.7%):</p>  
                               <p ng-if="Idioma == 'ES'">Probabilidad de presentar Síndrome Metabólico (61.7%):</p>  
 
                               <div class="progress">
@@ -235,10 +235,10 @@
                               </div>
                             </div>
                             <div ng-if="user.cb2 !== true">
-                              <div class="alert alert-success" role="alert" ng-if="Idioma == 'EN'">Moderated Risk for Metabolic Syndrome.</div>
+                              <div class="alert alert-success" role="alert" ng-if="Idioma == 'EN'">Moderated Metabolic Syndrome Risk.</div>
                               <div class="alert alert-success" role="alert" ng-if="Idioma == 'ES'">Su riesgo de presentar Síndrome Metabólico es moderado.</div>
 
-                              <p ng-if="Idioma == 'EN'">Statistical significance (16.9%):</p>
+                              <p ng-if="Idioma == 'EN'">Probability of developing Metabolic Syndrome (16.9%):</p>
                               <p ng-if="Idioma == 'ES'">Probabilidad de presentar Síndrome Metabólico (16.9%):</p>
 
                               <div class="progress">
