Añadido Gráfico Doughnut

--- a/MetS/wt.html
+++ b/MetS/wt.html
@@ -154,6 +154,8 @@
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/scripts.js"></script>
     <script src="js/mets.js"></script>
+    <script src='js/Chart.min.js'></script>
+    <script src='js/tc-angular-chartjs.min.js'></script>    
     
 	</body>
 </html>
