--- a/MetS/ab.html
+++ b/MetS/ab.html
@@ -181,6 +181,8 @@
 		<script src="js/scripts.js"></script>
     <script src="js/mets.js"></script>
     <script src="js/pdfplugin.js"></script>
+    <script src='js/Chart.min.js'></script>
+    <script src='js/tc-angular-chartjs.min.js'></script>    
 
     
 	</body>
