Añadido Gráfico Doughnut

--- a/MetS/index.html
+++ b/MetS/index.html
@@ -222,7 +222,7 @@
                               </div>
                               
                               <div class="canvas-holder">
-                              <canvas tc-chartjs-doughnut chart-data="datavlow" chart-options="options" width="10" height="10" ></canvas>
+                              <canvas tc-chartjs-doughnut chart-data="datavlow" chart-options="options"></canvas>
                               </div>
                               
                              </div>
