--- a/MetS/ab.html
+++ b/MetS/ab.html
@@ -123,7 +123,7 @@
 
                           <h5>About NIM MetS v.1 - <i>Feb.2016</i></h5>
                           
-                          <p><img src="images/nim-mets.png" width="100px" class = "img-thumbnail"></p>
+                          <p><img src="images/mets.png" width="100px" class = "img-thumbnail"></p>
 
                           <div class="alert alert-info">Developed by <strong>José Checa-Claudel.</strong> <i>Programmer Analyst at New Technologies Area. Support Services for Teaching and Research - Systems, University of Cordoba, Córdoba, Spain. <a href="http://orcid.org/0000-0001-6501-0283" target="_blank">ORCID: 0000-0001-6501-0283</a> at <a href="https://github.com/jcheca"><img src="images/git.png"></a> </i><a href="http://twitter.com/abbasben" target="_black"><img src="images/twitter.png"></a>
                           <a href="https://www.facebook.com/abbascomputing/" target="_blank"><img src="images/facebook.png"></a>
@@ -146,7 +146,7 @@
 
                           <h5>Acerca de NIM MetS v.1 - <i>Feb.2016</i></h5>
                           
-                          <p><img src="images/nim-mets.png" width="100px" class = "img-thumbnail"></p>
+                          <p><img src="images/mets.png" width="100px" class = "img-thumbnail"></p>
 
                           <div class="alert alert-info">Desarrollado por <strong>José Checa-Claudel.</strong> <i>Analista Programador en el Área de Nuevas Tecnologías. Soporte a la Docencia y a la Investigación - Sistemas, Universidad de Cordoba, Córdoba, España. <a href="http://orcid.org/0000-0001-6501-0283" target="_blank">ORCID: 0000-0001-6501-0283</a> en <a href="https://github.com/jcheca" target="_blank"><img src="images/git.png"></a> </i><a href="http://twitter.com/abbasben" target="_black"><img src="images/twitter.png"></a>
                           <a href="https://www.facebook.com/abbascomputing/" target="_blank"><img src="images/facebook.png"></a>
