--- a/MetS/index.html
+++ b/MetS/index.html
@@ -106,7 +106,7 @@
                       <p class="logo2">Non-invasive method for early detection.</p>
                       </div>
                       <div ng-if="Idioma == 'ES'"> 
-                      <p class="logo2">Método para detección precoz del síndrome metabólico.</p>
+                      <p class="logo2">Método detección precoz síndrome metabólico.</p>
                       </div>
 
                   	</div>
