MetS sin dependencias CDN

--- a/MetS/index.html
+++ b/MetS/index.html
@@ -308,7 +308,11 @@
 
 
 	<!-- script references -->
+    <!--
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+  -->
+    <script src="js/jquery-2.2.1.min.js"></script>
+
     <script src="angular/1.4.3/angular.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/scripts.js"></script>
