--- a/MetS/sm.html
+++ b/MetS/sm.html
@@ -177,7 +177,10 @@
 
 
 	<!-- script references -->
+    <!--
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+  -->
+    <script src="js/jquery-2.2.1.min.js"></script>
     <script type="text/javascript" src="angular/1.4.3/angular.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/scripts.js"></script>
