--- a/MetS/index.html
+++ b/MetS/index.html
@@ -17,6 +17,8 @@
 		<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 	<link href="css/styles.css" rel="stylesheet">
+	<link href="css/angular-switcher.min.css" rel="stylesheet">
+
 
 </head>
 <body ng-app="mets" ng-controller="Idioma">
@@ -158,7 +160,38 @@
                         <h5>Responda a estas preguntas para comprobar su estado.</h5>
                         </div>
 
+                        <hr>
+						<strong ng-if="Idioma == 'EN'">Is WtHR >= 0,55 ?</strong>
+						<strong ng-if="Idioma == 'ES'">Es el ICT >= 0,55 ?</strong>
+						<switcher ng-model="user.cb1" true-value="true" true-label="Yes" false-value="false" false-label="No"></switcher>
+						<p>
 
+						<strong ng-if="Idioma == 'EN'">Is Blood Pressure >= 128/85 mmHg ?</strong>		
+						<strong ng-if="Idioma == 'ES'">Es la Presión Arterial >= 128/85 mmHg ?</strong>						
+						<switcher ng-model="user.cb2" true-value="true" true-label="Yes" false-value="false" false-label="No"></switcher>
+						<hr>
+
+
+
+
+					<!--
+                    <div class="row">
+                    <div class="col-lg-12">
+						<strong ng-if="Idioma == 'EN'">Is Blood Pressure >= 128/85 mmHg ?</strong>
+						<strong ng-if="Idioma == 'ES'">Es la Presión Arterial >= 128/85 mmHg ?</strong>
+						<switcher ng-model="user.cb2" true-value="true" true-label="Yes" false-value="false" false-label="No" ng-if="Idioma == 'EN'"></switcher>
+						<switcher ng-model="user.cb2" true-value="true" true-label="Si" false-value="false" false-label="No" ng-if="Idioma == 'ES'"></switcher>	
+					</div>
+					<div>
+					-->
+
+								
+
+
+
+
+
+					<!--
                         <div class="row">
                           <div class="col-lg-6">
                             <div class="input-group">
@@ -168,8 +201,8 @@
                               <input type="text" class="form-control" value="Is WtHR >= 0,55 ?" disabled ng-if="Idioma == 'EN'">
                               <input type="text" class="form-control" value="Es el ICT >= 0,55 ?" disabled ng-if="Idioma == 'ES'">
 
-                            </div><!-- /input-group -->
-                          </div><!-- /.col-lg-6 -->
+                            </div>
+                          </div>
                         </div>
 
                         <p>
@@ -182,9 +215,10 @@
                               </span>
                               <input type="text" class="form-control" value="Is Blood Pressure >= 128/85 mmHg ?" disabled ng-if="Idioma == 'EN'">
                               <input type="text" class="form-control" value="Es la Presión Arterial >= 128/85 mmHg ?" disabled ng-if="Idioma == 'ES'">
-                            </div><!-- /input-group -->
-                          </div><!-- /.col-lg-6 -->
+                            </div>
+                          </div>
                         </div>
+                        -->
 
                         <p>
                         <div class="row">
@@ -329,6 +363,8 @@
     <script src="js/mets.js"></script>
     <script src='js/Chart.min.js'></script>
     <script src='js/tc-angular-chartjs.min.js'></script>
+    <script src='js/angular-switcher.min.js'></script>
+
 
     
 	</body>
