Cambio de Checkboxers por Sliders

--- a/MetS/index.html
+++ b/MetS/index.html
@@ -163,12 +163,12 @@
                         <hr>
 						<strong ng-if="Idioma == 'EN'">Is WtHR >= 0,55 ?</strong>
 						<strong ng-if="Idioma == 'ES'">Es el ICT >= 0,55 ?</strong>
-						<switcher ng-model="user.cb1" true-value="true" true-label="Yes" false-value="false" false-label="No"></switcher>
+						<switcher ng-model="user.cb1" true-value="true" true-label="Yes/Si" false-value="false" false-label="No"></switcher>
 						<p>
 
 						<strong ng-if="Idioma == 'EN'">Is Blood Pressure >= 128/85 mmHg ?</strong>		
 						<strong ng-if="Idioma == 'ES'">Es la Presión Arterial >= 128/85 mmHg ?</strong>						
-						<switcher ng-model="user.cb2" true-value="true" true-label="Yes" false-value="false" false-label="No"></switcher>
+						<switcher ng-model="user.cb2" true-value="true" true-label="Yes/Si" false-value="false" false-label="No"></switcher>
 						<hr>
 
 
