Tradución Inglés WThr y BP

--- a/MetS/ht.html
+++ b/MetS/ht.html
@@ -122,6 +122,58 @@
                           <h5>HT.</h5>
 
                           <p>To measure BP, the recommendations in the Manual of Hypertension of the Spanish Society of Family Medicine were followed. BP was determined after a resting period of 10 minutes in the supine position using an automatic and calibrated sphygmomanometer (OMRON M3, OMRON Healthcare Europe, Spain). As indicated for the anthropometrical measures, BP was measured three times with a 1-minute gap between each measurement and an average value was calculated.</p>
+
+                          <hr>
+
+                          <h5>Measuring blood pressure.</h5>
+
+                          <p>BP is measured in clinical practice using an indirect method. By an inflatable cuff pressure is exerted brachial artery until complete disappearance of the blood flow and therefore pulse. Subsequently, we proceed to the slow deflation of the same, then obtaining the PAS at the time arterial flow by auscultation or palpation detected again. The latter is equivalent to the first Korotkoff. The PAD is estimated when auscultation noises disappear completely, being equivalent to the fifth Korotkoff.</p>
+
+                          <h5>Terms.</h5>
+
+                          <p>To establish a diagnosis and an accurate measurement to be completed a number of conditions, as detailed below:</p>
+
+                          <h5>Environmental conditions:</h5>
+
+                          <ul>
+                            <li>Quiet room, no noise or interruptions, with a temperature of 20-25 ° C.</li>
+                            <li>Hard plane where the arm support and seatback.</li>
+                          </ul>
+
+                          <h5>Previous rules.</h5>
+
+                          <ul>
+                            <li>From half an hour before the measurement exercise should be avoided, coffee, snuff, alcohol and, in general, any food or drink.</li>
+                            <li>Previously urinate before taking tension.</li>
+                            <li>Sitting rest at least five minutes before taking.</li>
+                          </ul>
+
+                          <h5>Right position.</h5>
+
+                          <p>Sitting, leaning back, arm relaxed without clothes that oppresses and resting on a table or stand, with the palm up and slightly bent at the elbow heart level. Do not cross your legs.</p>
+
+                          <h5>Measuring devices.</h5>
+
+                          <ul>
+                            <li><strong>Sphygmomanometer.</strong> They are used: mercury sphygmomanometer and electronic devices for ease and convenience of use. They must be approved, validated and calibrated.</li>
+                            <li><strong>Stethoscopes.</strong> Used for auscultation by manually taking sphygmomanometer.</li>
+                          </ul>
+
+                          <h5>Measuring technique.</h5>
+
+                          <p>They should be performed at least two measurements separated by at least 2 minutes, having a third repeat if a pressure difference between both greater than 5 mmHg is detected.</p>
+ 
+                          <p><i>Locate the <strong>brachial artery</strong> palpation along the inner arm.</i></p>
+                          <p><img src="images/pa_01.png" width="300px"></p>
+
+                          <p><i><strong>Place the sleeve</strong> So that the camera is placed above the arterial pulse; then adjust carefully. The lower edge, usually indicated by the signal that matches the brachial artery and must be 2-3 cm above the pit antecubiltal.</i></p>
+                          <p><img src="images/pa_02.png" width="300px"></p>
+
+                          <p><i><strong>Place the phonendoscope</strong> with the membrane above the artery, without pressing too. Never enter the stethoscope below the sleeve.</i></p>
+
+                          <p><i><strong>Insufflate the sleeve</strong> rapidly to a pressure of 20 mmHg above the systolic, which is recognized by the disappearance of radial pulse. Deflate the cuff at 2 mmHg per second. Register Phase I (onset of noise) and phase V of Korotkoff (complete disappearance of the noise).</i></p>
+                          <p><img src="images/pa_03.png" width="300px"></p>
+
               
                           <hr>
                           <a href="index.html"><i class="glyphicon glyphicon-share"></i></a> Return Test
