--- a/MetS/wt.html
+++ b/MetS/wt.html
@@ -119,6 +119,41 @@
 
                             <p>Height was measured to the nearest 0.1 cm using a stadiometer. Waist and hip circumferences were measured using a flexible steel tape. The plane of the tape was perpendicular to the long axis of the body and parallel to the floor. WC was measured half way between the lower costal border and the iliac crest. The measurement was made at the end of a normal expiration while the subject stood upright, with feet together and arms hanging freely at the sides. Hip circumference was measured over non- restrictive underwear, or light-weight shorts, at the level of the maximum extension of the buttocks posteriorly in a horizontal plane, without compressing the skin.</p>
 
+                            <hr>
+
+                            <h5>Measuring waist circumference.</h5>
+
+                            <h5>Necessary materials.</h5>
+
+                            <ul>
+                              <li>A tape measure to anthropometry (inextensible).</li>
+                              <li>Paper and pen.</li>
+                            </ul>
+
+                            <h5>Preparation of the person.</h5>
+
+                            <p>This measurement should be taken without clothing, that is, directly on the skin. If this is not possible, you can measure the waist circumference above a tissue, but never over thick or bulky clothing.</p>
+
+                            <p>Correct position for measurement:</p>
+
+                            <ul>
+                              <li>At the end of a normal expiration.</li>
+                              <li>Arms relaxed natural position.</li>
+                              <li>Locate the following anatomical references: the lower edge of the last rib and the iliac crest.</li>
+                              <li>Pass the tape through the midpoint of the segment formed between the two anatomical references.</li>
+                            </ul>
+
+                            <p>Measuring procedure:</p>
+                              <ul>
+                                <li>Perform the measurement with an accuracy of 0.1 cm.</li>
+                                <li>Carried out at least two measurements and write them down on paper.</li>
+                                <li>Determines the average of measurements.</li>
+                              </ul>
+
+                            <p><img src="images/cintura.png" width="300px"></p>
+
+
+
 
                             <!-- Video Aqui
                             <div class="embed-responsive embed-responsive-16by9">
