--- a/MetS/ab.html
+++ b/MetS/ab.html
@@ -135,7 +135,7 @@
                             <a class="btn btn-default view-pdf" href="images/article_mets.pdf" role="button" target="_blank">PDF Article &raquo;</a>
                             <a href="apks/nimmets.apk"><img src="images/android.png" width="100px"class = "img-thumbnail"></a>
                           </p>
-                          <h5><i>* Registered in the Registry of Intellectual Property of Andalusia No. CO - 114-16</i></h5>
+                          <h5><i>* Registered in the Registry of Intellectual Property of Andalusia.Spain No. CO - 114-16</i></h5>
 
                         </div>
 
@@ -163,7 +163,7 @@
                             <a href="apks/nimmets.apk"><img src="images/android.png" width="100px"class = "img-thumbnail"></a>
                           </p>
 
-                          <h5><i>* Inscrito en el Registro de la Propiedad Intelectual de Andalucía Nº CO-114-16</i></h5>
+                          <h5><i>* Inscrito en el Registro de la Propiedad Intelectual de Andalucía.Spain Nº CO-114-16</i></h5>
 
 
                         </div>
