Initial Squeleton Commit UmvI

--- a/UmvI/01.html
+++ b/UmvI/01.html
@@ -35,8 +35,7 @@
                             <li>
                                 <h3>
                                     <a href="http://www.uco.es" target="_blank"><img src="images/logo-footer.png" width=28 alt="logo"></a> 
-                                    <a href="http://imibic.org" target="_blank"><img src="images/imibic.png" width=130 alt="logo2"></a>
-                                    UmVi
+                                    <hr>UmVi
                                 </h3> UmVi
                             </li>
                         </ul>
